@@ -1,3 +1,8 @@
+2012-04-23 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* godmode/reporting/visual_console_builder.data.php: Fixed a problem
+	with some links and new menu structure.
+
 2012-04-23 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_users.php, operation/users/webchat.php,
